fixed text wrapping issue on product card

--- a/styles.css
+++ b/styles.css
@@ -431,6 +431,13 @@ nav{
     & * {
         margin: 0;
     }
+    & h3{
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+        height: 1.75rem;
+    }
 }
 .price_container{
     display: flex;
